Add Redis as a primary database for product configurations